[package]
name = "texclean-rs"
version = "0.1.0-DEV"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
homepage = "https://ajinkyakokandakar.com/latex-clean-rs"
repository = "https://github.com/ajinkya-k/latex-clean-rs"
readme = "README.md"
description = "A command line tool to remove temporary files created during (La)TeX compilation."

[[bin]]
name = "latex-clean"
path = "src/main.rs"

[dependencies]
